--- a/index.html
+++ b/index.html
@@ -949,14 +949,14 @@
                 <svg>
                   <use xlink:href="./images/sprite.svg#icon-location"></use>
                 </svg>
-              </span> 43 Dream House, Dreammy street, 7131 Dreamville, USA
+              </span> 34 blida
                         </div>
                         <div>
                             <span>
                 <svg>
                   <use xlink:href="./images/sprite.svg#icon-envelop"></use>
                 </svg>
-              </span> basudevnayak31@gmail.com
+              </span> sidaxe@gmail.com
                         </div>
                         <div>
                             <span>
@@ -970,7 +970,7 @@
                 <svg>
                   <use xlink:href="./images/sprite.svg#icon-paperplane"></use>
                 </svg>
-              </span> Dream City, KOLKATA
+              </span> cty
                         </div>
                     </div>
                 </div>
