--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
                 <svg>
                   <use xlink:href="./images/sprite.svg#icon-phone"></use>
                 </svg>
-              </span> 7407-338-338
+              </span> (+213)658424762
                         </div>
                         <div>
                             <span>
